RESOLVED FIXED109167
[V8] #ifndef NDEBUG is redundant for assertContextHasCorrectPrototype()
https://bugs.webkit.org/show_bug.cgi?id=109167
Summary [V8] #ifndef NDEBUG is redundant for assertContextHasCorrectPrototype()
Kentaro Hara
Reported 2013-02-07 03:25:18 PST
Given that assertContextHasCorrectPrototype() is anyway empty in a release build, we don't need to surround it with #ifndef NDEBUG.
Attachments
Patch (2.71 KB, patch)
2013-02-07 03:26 PST, Kentaro Hara
kling: review+
webkit.review.bot: commit-queue-
Kentaro Hara
Comment 1 2013-02-07 03:26:42 PST
Kentaro Hara
Comment 2 2013-02-07 05:40:46 PST
Comment on attachment 187043 [details] Patch Thanks!
WebKit Review Bot
Comment 3 2013-02-07 07:27:10 PST
Comment on attachment 187043 [details] Patch Rejecting attachment 187043 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-04', 'apply-attachment', '--no-update', '--non-interactive', 187043, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/bindings/v8/DOMWrapperWorld.cpp patching file Source/WebCore/bindings/v8/DOMWrapperWorld.h Hunk #1 FAILED at 60. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/bindings/v8/DOMWrapperWorld.h.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', '--force', '--reviewer', 'Andreas Kling']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output: http://queues.webkit.org/results/16415313
Kentaro Hara
Comment 4 2013-02-07 17:08:14 PST
Note You need to log in before you can comment on or make changes to this bug.