[V8] #ifndef NDEBUG is redundant for assertContextHasCorrectPrototype() https://bugs.webkit.org/show_bug.cgi?id=109167

Reviewed by Andreas Kling.

Given that assertContextHasCorrectPrototype() is anyway empty in a release
build, we don't need to surround it with #ifndef NDEBUG.

No tests. No change in behavior.

* bindings/v8/DOMWrapperWorld.cpp:
(WebCore::DOMWrapperWorld::assertContextHasCorrectPrototype):
* bindings/v8/DOMWrapperWorld.h:
(DOMWrapperWorld):
(WebCore::DOMWrapperWorld::isolated):

Canonical link: https://commits.webkit.org/127453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142209 268f45cc-cd09-0410-ab3c-d52691b4dbfc